fix: switch to SQLite for dev, replace passlib with direct bcrypt, auto-create tables on startup

--- a/alembic.ini
+++ b/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = postgresql+psycopg://crm:crm@localhost:5432/crm
+sqlalchemy.url = sqlite:///./crm.db
 
 [loggers]
 keys = root,sqlalchemy,alembic
